--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 <body id="page">
     <header>
         <div id="wrap">
-            <a href="index.html" title="Home"><img class="logo" src="img/logo.png" alt="Logo" /></a>
+            <a href="index.html" title="Home"><img class="logo" src="img/logo.svg" alt="Logo" /></a>
             <nav id="nav">
                 <ul>
                     <li><a class="selected" href="index.html" title="Home">Home</a></li>
                     <li><a href="menu.html" title="Fair Program">Fair Program</a></li>
                     <li><a href="gallery.html" title="Sponsors">Sponsors</a></li>
                     <li><a href="contact.html" title="Contact">Contact</a></li>
-                    <li><a href="https://www.instagram.com/" title="Instagram" target="_blank" /><img class="instagram-header-icon" src="img/instagram-header-icon.png" alt="Instagram Icon"></a>
+                    <li><a href="https://www.instagram.com/" title="Instagram" target="_blank" /><img class="instagram-header-icon" src="img/facebook-icon.svg" alt="Instagram Icon"></a>
                     </li>
                 </ul>
             </nav>
@@ -46,10 +46,12 @@
     </header>
     <div class="hero-image-home"> </div>
     <div class="main">
-        <p>Fair&#178; is an event organized by the honors program of Utrecht University with the goal of informing and educating on the subject of fairness along the food production chain. The event will take place in #location# on #date# where you'll be able to follow lectures, participate in debates and workshops, and freely browse a fair.</p>
-        <p>The event would not have been possible without our <a href="gallery.html" title="Sponsors">sponsors</a>, who worked together with us to make the fair come true.</p>
-        <p>For more information on the fair or to get in touch, check out our <a href="contact.html" title="Contact">contacts page.</a></p>
+        <p>Fair&#178; offers you the unique opportunity to take part in an event combining education and entertainment. The aim of the event is to inform the public about fairness in the food production chain and show that fairness and profitability are not mutually exclusive. We define the concept of “fairness” through three key elements: fairness towards the environment, fairer treatment towards animals, and fairness towards people.</p>
+        <p>The event is organised by the honours students of Utrecht School of Economics and will take place at <b>Utrecht University on May 10, 2017.</b> Fair&#178; is open to everyone and is free of charge. You will be able to follow several lectures, participate in workshops, and freely browse the information market, where you can purchase food or get free samples. A list of participating companies can be found <a href="gallery.html" title="Sponsors">here.</a></p>
+        <p>We would like to thank our <a href="gallery.html" title="Sponsors">sponsors</a>, who made this event possible.</p>
+        <p>For additional information, check our <a href="contact.html" title="Contact">contacts</a> or send us an email at <a href="mailto:contact@fair-squared.org" title="In regards to Fair&#178;">contact@fair-squared.org</a></p>
     </div>
+    <div class="main home-icons-div"> <img class="home-icons" src="img/cow.svg" /> <img class="home-icons" src="img/trade.svg" /> <img class="home-icons" src="img/farmer.svg" /> </div>
     <footer>
         <p>&copy; 2016 Jordan Mike</p>
     </footer>
