--- a/menu.html
+++ b/menu.html
@@ -31,14 +31,14 @@
 <body id="page">
     <header>
         <div id="wrap">
-            <a href="index.html" title="Home"><img class="logo" src="img/logo.png" alt="Logo" /></a>
+            <a href="index.html" title="Home"><img class="logo" src="img/logo.svg" alt="Logo" /></a>
             <nav id="nav">
                 <ul>
                     <li><a href="index.html" title="Home">Home</a></li>
                     <li><a class="selected" href="menu.html" title="Fair Program">Fair Program</a></li>
                     <li><a href="gallery.html" title="Sponsors">Sponsors</a></li>
                     <li><a href="contact.html" title="Contact">Contact</a></li>
-                    <li><a href="https://www.instagram.com/" title="Instagram" target="_blank" /><img class="instagram-header-icon" src="img/instagram-header-icon.png" alt="Instagram Icon"></a>
+                    <li><a href="https://www.instagram.com/" title="Instagram" target="_blank" /><img class="instagram-header-icon" src="img/facebook-icon.svg" alt="Instagram Icon"></a>
                     </li>
                 </ul>
             </nav>
