--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <nav id="nav">
                 <ul>
                     <li><a class="selected" href="index.html" title="Home">Home</a></li>
-                    <li><a href="menu.html" title="Fair Program">Fair Program</a></li>
+                    <li><a href="menu.html" title="Fair Program">Fair test Program</a></li>
                     <li><a href="gallery.html" title="Sponsors">Sponsors</a></li>
                     <li><a href="contact.html" title="Contact">Contact</a></li>
                     <li><a href="https://www.instagram.com/" title="Instagram" target="_blank" /><img class="instagram-header-icon" src="img/facebook-icon.svg" alt="Instagram Icon"></a>
