--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li><a href="menu.html" title="Fair Program">Fair Program</a></li>
                     <li><a href="gallery.html" title="Sponsors">Sponsors</a></li>
                     <li><a href="contact.html" title="Contact">Contact</a></li>
-                    <li><a href="https://www.instagram.com/" title="Instagram" target="_blank" /><img class="instagram-header-icon" src="img/facebook-icon.svg" alt="Facebook Icon"></a>
+                    <li><a href="https://facebook.com/fairssquared/" title="Facebook" target="_blank" /><img class="instagram-header-icon" src="img/facebook-icon.svg" alt="Facebook Icon"></a>
                     </li>
                 </ul>
             </nav>
