--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,7 @@
     <title>Fair&#178; | Program</title>
     <!-- Meta Zone -->
     <meta charset="utf-8">
-    <meta name="description" content="fairsquared, fair food for whatever blah blah" />
+    <meta name="description" content="Fair&#178; offers you the unique opportunity to take part in an event combining education and entertainment. The aim of the event is to inform the public about fairness in the food production chain and show that fairness and profitability are not mutually exclusive." />
     <meta name="keywords" content="fair and square, utrecht university, honors, food, economics, trade">
     <meta name="robots" content="index, follow, all" />
     <meta name="author" content="fairsquared">
@@ -38,7 +38,7 @@
                     <li><a class="selected" href="menu.html" title="Fair Program">Fair Program</a></li>
                     <li><a href="gallery.html" title="Sponsors">Sponsors</a></li>
                     <li><a href="contact.html" title="Contact">Contact</a></li>
-                    <li><a href="https://www.instagram.com/" title="Instagram" target="_blank" /><img class="instagram-header-icon" src="img/facebook-icon.svg" alt="Instagram Icon"></a>
+                    <li><a href="https://facebook.com/fairssquared/" title="Facebook" target="_blank" /><img class="instagram-header-icon" src="img/facebook-icon.svg" alt="Facebook Icon"></a>
                     </li>
                 </ul>
             </nav>
