--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
             <a href="index.html" title="Home"><img class="logo" src="img/logo.png" alt="Logo" /></a>
             <nav id="nav">
                 <ul>
-                    <li><a href="index.html" title="Home">Home test</a></li>
+                    <li><a href="index.html" title="Home">Home</a></li>
                     <li><a href="menu.html" title="Fair Program">Fair Program</a></li>
                     <li><a href="gallery.html" title="Sponsors">Sponsors</a></li>
                     <li><a class="selected" href="contact.html" title="Contact">Contact</a></li>
