--- a/gallery.html
+++ b/gallery.html
@@ -46,23 +46,15 @@
     </header>
     <div class="hero-image-gallery"> </div>
     <div class="main">
-        <p>Here you can find direct links to our sponsors. You may want to check them out before the fair where you'll have the opportunity to talk to representatives and speakers from these companies and associations.</p>
+        <p>Here you can find direct links to our sponsors. You may want to check them out before the fair where you'll have the opportunity to talk to representatives and speakers from these companies and organizations.</p>
         <hr> </br>
         </br>
         <section>
             <div>
-                <a class="example-image-link" href="img/gallery-image-one.jpg" data-lightbox="example-set"><img class="example-image" src="img/gallery-thumb-one.jpg" /></a>
-                <a class="example-image-link" href="img/gallery-image-two.jpg" data-lightbox="example-set"><img class="example-image" src="img/gallery-thumb-two.jpg" /></a>
-                <a class="example-image-link" href="img/gallery-image-three.jpg" data-lightbox="example-set"><img class="example-image" src="img/gallery-thumb-three.jpg" /></a>
-                <a class="example-image-link" href="img/gallery-image-seven.jpg" data-lightbox="example-set"><img class="example-image" src="img/gallery-thumb-seven.jpg" /></a>
-                <a class="example-image-link" href="img/gallery-image-eight.jpg" data-lightbox="example-set"><img class="example-image" src="img/gallery-thumb-eight.jpg" /></a>
-                <a class="example-image-link" href="img/gallery-image-three.jpg" data-lightbox="example-set"><img class="example-image" src="img/gallery-thumb-three.jpg" /></a>
-                <a class="example-image-link" href="img/gallery-image-four.jpg" data-lightbox="example-set"><img class="example-image" src="img/gallery-thumb-four.jpg" /></a>
-                <a class="example-image-link" href="img/gallery-image-five.jpg" data-lightbox="example-set"><img class="example-image" src="img/gallery-thumb-five.jpg" /></a>
-                <a class="example-image-link" href="img/gallery-image-six.jpg" data-lightbox="example-set"><img class="example-image" src="img/gallery-thumb-six.jpg" /></a>
-                <a class="example-image-link" href="img/gallery-image-seven.jpg" data-lightbox="example-set"><img class="example-image" src="img/gallery-thumb-seven.jpg" /></a>
-                <a class="example-image-link" href="img/gallery-image-eight.jpg" data-lightbox="example-set"><img class="example-image" src="img/gallery-thumb-eight.jpg" /></a>
-                <a class="example-image-link" href="img/gallery-image-three.jpg" data-lightbox="example-set"><img class="example-image" src="img/gallery-thumb-three.jpg" /></a>
+                <a class="example-image-link" href="https://www.academicsfordevelopment.nl"><img class="example-image" src="img/afd.png" alt="Academics for Development logo" data-lightbox="example-set"/></a>
+                <a class="example-image-link" href="http://www.biobites.com/"><img class="example-image" src="img/biobites.png" alt="Biobites logo" data-lightbox="example-set"/></a>
+                <a class="example-image-link" href="https://www.jimmyjoy.com/"><img class="example-image" src="img/jimmyjoy.png" alt="Jimmy Joy logo" data-lightbox="example-set"/></a>
+                <a class="example-image-link" href="http://www.veganmission.nl/"><img class="example-image" src="img/xxl.png" alt="Vegan Mission logo" data-lightbox="example-set"/></a>
             </div>
         </section>
     </div>
