--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,7 @@
         <p>Here you can find direct links to our sponsors. You may want to check them out before the fair where you'll have the opportunity to talk to representatives and speakers from these companies and organizations.</p>
         <hr> </br>
         </br>
-        <section>
+        <section id="sponsors">
             <div class="grid">
                 <a class="example-image-link" href="https://www.academicsfordevelopment.nl"><img class="grid-item" src="img/afd.png" alt="Academics for Development logo" data-lightbox="example-set" /></a>
                 <a class="example-image-link" href="http://www.biobites.com/"><img class="grid-item" src="img/biobites.png" alt="Biobites logo" data-lightbox="example-set" /></a>
