--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Fair&#178; | Sponsors</title>
+    <title>Fair&#178; | Partners</title>
     <!-- Meta Zone -->
     <meta charset="utf-8">
     <meta name="description" content="Fair&#178; offers you the unique opportunity to take part in an event combining education and entertainment. The aim of the event is to inform the public about fairness in the food production chain and show that fairness and profitability are not mutually exclusive." />
@@ -39,7 +39,7 @@
                 <ul>
                     <li><a href="index.html" title="Home">Home</a></li>
                     <li><a href="menu.html" title="Fair Program">Fair Program</a></li>
-                    <li><a class="selected" href="gallery.html" title="Sponsors">Sponsors</a></li>
+                    <li><a class="selected" href="gallery.html" title="Partners">Partners</a></li>
                     <li><a href="contact.html" title="Contact">Contact</a></li>
                     <li><a href="https://facebook.com/fairssquared/" title="Facebook" target="_blank" /><img class="instagram-header-icon" src="img/facebook-icon.svg" alt="Facebook Icon"></a>
                     </li>
@@ -61,7 +61,7 @@
                 <a class="example-image-link" href="http://www.innovadatabase.com"><img class="grid-item" src="img/innova.png" alt="Innova Market Insights logo" data-lightbox="example-set" /></a>
                 <a class="example-image-link" href="https://www.facebook.com/SeitanChefs/"><img class="grid-item" src="img/seitan.png" alt="Seitan Chefs logo" data-lightbox="example-set" /></a>
                 <a class="example-image-link" href="https://shop.selocoffeefruit.com/"><img class="grid-item" src="img/selo.png" alt="Selo logo" data-lightbox="example-set" /></a>
-                <a class="example-image-link" href="https://www.uu.nl/organisatie/utrecht-university-school-of-economics-use"><img class="grid-item" src="img/use.png" alt="USE logo" data-lightbox="example-set" /></a>
+                <a class="example-image-link" href="https://www.uu.nl/organisatie/utrecht-university-school-of-economics-use"><img class="grid-item-2" src="img/use.png" alt="USE logo" data-lightbox="example-set" /></a>
                 <a class="example-image-link" href="http://www.veganmission.nl/"><img class="grid-item" src="img/xxl.png" alt="Vegan Mission logo" data-lightbox="example-set" /></a>
             </div>
         </section>
