--- a/menu.html
+++ b/menu.html
@@ -36,7 +36,7 @@
                 <ul>
                     <li><a href="index.html" title="Home">Home</a></li>
                     <li><a class="selected" href="menu.html" title="Fair Program">Fair Program</a></li>
-                    <li><a href="gallery.html" title="Sponsors">Sponsors</a></li>
+                    <li><a href="gallery.html" title="Partners">Partners</a></li>
                     <li><a href="contact.html" title="Contact">Contact</a></li>
                     <li><a href="https://facebook.com/fairssquared/" title="Facebook" target="_blank" /><img class="instagram-header-icon" src="img/facebook-icon.svg" alt="Facebook Icon"></a>
                     </li>
