--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Fair&#178; | Partners</title>
+    <title>Fair&#178; | Participants</title>
     <!-- Meta Zone -->
     <meta charset="utf-8">
     <meta name="description" content="Fair&#178; offers you the unique opportunity to take part in an event combining education and entertainment. The aim of the event is to inform the public about fairness in the food production chain and show that fairness and profitability are not mutually exclusive." />
@@ -39,7 +39,7 @@
                 <ul>
                     <li><a href="index.html" title="Home">Home</a></li>
                     <li><a href="menu.html" title="Fair Program">Fair Program</a></li>
-                    <li><a class="selected" href="gallery.html" title="Partners">Partners</a></li>
+                    <li><a class="selected" href="gallery.html" title="Participants">Participants</a></li>
                     <li><a href="contact.html" title="Contact">Contact</a></li>
                     <li><a href="https://facebook.com/fairssquared/" title="Facebook" target="_blank" /><img class="instagram-header-icon" src="img/facebook-icon.svg" alt="Facebook Icon"></a>
                     </li>
