--- a/menu.html
+++ b/menu.html
@@ -36,7 +36,7 @@
                 <ul>
                     <li><a href="index.html" title="Home">Home</a></li>
                     <li><a class="selected" href="menu.html" title="Fair Program">Fair Program</a></li>
-                    <li><a href="gallery.html" title="Partners">Partners</a></li>
+                    <li><a href="gallery.html" title="Participants">Participants</a></li>
                     <li><a href="contact.html" title="Contact">Contact</a></li>
                     <li><a href="https://facebook.com/fairssquared/" title="Facebook" target="_blank" /><img class="instagram-header-icon" src="img/facebook-icon.svg" alt="Facebook Icon"></a>
                     </li>
@@ -53,46 +53,34 @@
         <table>
             <thead>
                 <tr>
-                    <th rowspan="2"><b>Program</b> | Updated 12th of January 2017</th>
+                    <th rowspan="2"><b>Program</b> | Updated 14th of April 2017</th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td><b>13-17</b> Fair and information market</td>
-                    <td>Adam Smith Canteen</td>
+                    <td><b>11-16</b> Fair</td>
+                    <td>TBD</td>
                 </tr>
                 <tr>
-                    <td><b>13</b> Lecture</td>
+                    <td><b>13:30</b> Workshop or presentation</td>
+                    <td>TBD</td>
+                </tr>
+                <tr>
+                    <td><b>14</b> Symposium with Jimmy Joy</td>
+                    <td>U.S.E. Auditorium</td>
+                </tr>
+                <tr>
+                    <td><b>14:30</b> Workshop or presentation</td>
+                    <td>TBD</td>
+                </tr>
+                <tr>
+                    <td><b>14:45</b> Symposium</td>
                     <td>Auditorium</td>
                 </tr>
                 <tr>
-                    <td><b>14</b> Workshop X</td>
-                    <td>Adam Smith Canteen</td>
-                </tr>
-                <tr>
-                    <td><b>14</b> Workshop Y</td>
-                    <td>Adam Smith Canteen</td>
-                </tr>
-                <tr>
-                    <td><b>14</b> Lecture</td>
-                    <td>Auditorium</td>
-                </tr>
-                <tr>
-                    <td><b>15</b> Workshop Z</td>
-                    <td>Adam Smith Canteen</td>
-                </tr>
-                <tr>
-                    <td><b>15</b> Lecture</td>
-                    <td>Auditorium</td>
-                </tr>
-                <tr>
-                    <td><b>16</b> Workshop A</td>
-                    <td>Adam Smith Canteen</td>
-                </tr>
-                <tr>
-                    <td><b>16</b> Lecture</td>
-                    <td>Auditorium</td>
+                    <td><b>16</b> Networking and drinks</td>
+                    <td>TBD</td>
                 </tr>
             </tbody>
         </table>
