--- a/menu.html
+++ b/menu.html
@@ -67,7 +67,7 @@
                     <td>TBD</td>
                 </tr>
                 <tr>
-                    <td><b>14</b> Symposium with Jimmy Joy</td>
+                    <td><b>14&#160;&#160;&#160;</b> Symposium with Jimmy Joy</td>
                     <td>U.S.E. Auditorium</td>
                 </tr>
                 <tr>
@@ -76,10 +76,10 @@
                 </tr>
                 <tr>
                     <td><b>14:45</b> Symposium</td>
-                    <td>Auditorium</td>
+                    <td>U.S.E. Auditorium</td>
                 </tr>
                 <tr>
-                    <td><b>16</b> Networking and drinks</td>
+                    <td><b>16&#160;&#160;&#160;</b> Networking and drinks</td>
                     <td>TBD</td>
                 </tr>
             </tbody>
