--- a/gallery.html
+++ b/gallery.html
@@ -57,6 +57,7 @@
                 <a class="example-image-link" href="https://www.academicsfordevelopment.nl"><img class="grid-item" src="img/afd.png" alt="Academics for Development logo" data-lightbox="example-set" /></a>
                 <a class="example-image-link" href="http://www.biobites.com/"><img class="grid-item" src="img/biobites.png" alt="Biobites logo" data-lightbox="example-set" /></a>
                 <!--<a class="example-image-link" href="https://www.uu.nl/en/organisation/green-office-utrecht"><img class="grid-item" src="img/greenoffice.png" alt="Green Office logo" data-lightbox="example-set" /></a> -->
+                <a class="example-image-link" href="http://www.eetenkweekplek.nl"><img class="grid-item" src="img/dekas.png" alt="De Kas logo" data-lightbox="example-set" /></a>
                 <a class="example-image-link" href="https://www.jimmyjoy.com/"><img class="grid-item" src="img/jimmyjoy.png" alt="Jimmy Joy logo" data-lightbox="example-set" /></a>
                 <a class="example-image-link" href="http://www.innovadatabase.com"><img class="grid-item" src="img/innova.png" alt="Innova Market Insights logo" data-lightbox="example-set" /></a>
                 <a class="example-image-link" href="https://www.facebook.com/SeitanChefs/"><img class="grid-item" src="img/seitan.png" alt="Seitan Chefs logo" data-lightbox="example-set" /></a>
