--- a/menu.html
+++ b/menu.html
@@ -63,7 +63,7 @@
                     <td>TBD</td>
                 </tr>
                 <tr>
-                    <td><b>14&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b> Symposium with Jimmy Joy</td>
+                    <td><b>14&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b> Symposium with Jimmy Joy</td>
                     <td>U.S.E. Auditorium</td>
                 </tr>
                 <tr>
@@ -71,7 +71,7 @@
                     <td>U.S.E. Auditorium</td>
                 </tr>
                 <tr>
-                    <td><b>16&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b> Networking and drinks</td>
+                    <td><b>16&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b> Networking and drinks</td>
                     <td>TBD</td>
                 </tr>
             </tbody>
