--- a/menu.html
+++ b/menu.html
@@ -53,7 +53,7 @@
         <table>
             <thead>
                 <tr>
-                    <th rowspan="2"><b>Program</b> | Updated 14th of April 2017</th>
+                    <th rowspan="2"><b>Program</b> | Updated 24th of April 2017</th>
                     <th></th>
                 </tr>
             </thead>
@@ -67,7 +67,7 @@
                     <td>U.S.E. Auditorium</td>
                 </tr>
                 <tr>
-                    <td><b>14:45&nbsp;&nbsp;&nbsp;</b> Symposium</td>
+                    <td><b>14:45&nbsp;&nbsp;&nbsp;</b> Symposium with Innova Market Insights</td>
                     <td>U.S.E. Auditorium</td>
                 </tr>
                 <tr>
