switched innova and jimmy joy

--- a/menu.html
+++ b/menu.html
@@ -63,11 +63,11 @@
                     <td>TBD</td>
                 </tr>
                 <tr>
-                    <td><b>14&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b> Symposium with Jimmy Joy</td>
+                    <td><b>14&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</b> Symposium with Innova Market Insights</td>
                     <td>U.S.E. Auditorium</td>
                 </tr>
                 <tr>
-                    <td><b>14:45&nbsp;&nbsp;&nbsp;</b> Symposium with Innova Market Insights</td>
+                    <td><b>14:45&nbsp;&nbsp;&nbsp;</b> Symposium with Jimmy Joy</td>
                     <td>U.S.E. Auditorium</td>
                 </tr>
                 <tr>
